# MCServerHandler

./: Main.c  Main.lua  Main.py  README.md  Start.sh  main
Library-Code/: Build-Lib.sh  CMakeLists.txt
Library-Code/include/: MCServerHandler.h
Library-Code/src/: MCServerHandler.c  Tools.c
